--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 		  <head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width">
-			<title>My Profile</title>
+			<title>My profile</title>
 		  </head>
 		  <body>
 			<div align="center">
-				<h1>YOUR NAME HERE</h1>
-				<h2>Software Developer</h2>
+				<h1>Manuel Mendez</h1>
+				<h2>Future Full Stack Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
-					<h4>My hometown is HOMETOWN.</h4>
-					<h4>My favorite color is COLOR.</h4>
-					<h4>My favorite food is FOOD.</h4>
-					<h4>If I could be any animal, I would be A/AN ANIMAL.</h4>
+					<h4>My hometown is Las Vegas.</h4>
+					<h4>My favorite color is BLK.</h4>
+					<h4>My favorite food is Dem wings.</h4>
+					<h4>If I could be any animal, I would be Owl or a lamd shark but im leaning towards an owl.</h4>
 			</div>
 		  </body>
-		</html>
+		</html
