trying new things here

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         </nav>
     </header>
     <main>
-        <h2>Class Members</h2>
+        <h2>Manuel</h2>
         <section class="container">
             <div class="jane-style">
-                <h3>Hello World!</h3>
+                <h3>Hello moon!</h3>
             </div>
             <!-- New HTML content goes here! -->
             
             <div class="code-ninja-style">
-                <h3>This is first time using GitHub!</h3>
+                <h3>This is third time using GitHub!</h3>
             </div>
             <div class="codys-styles">
-                <h3>That's very exciting!</h3>
+                <h3>That's very AWESOME!</h3>
             </div>
             <div class="stans-styles">
-                <h3>Github isn't easy!</h3>
+                <h3>Github isn't easy AT ALLLLL!</h3>
             </div>
         </section>
     </main>
